@@ -1,6 +1,7 @@
 package pl.chudziudgi.lifesteal.feature.pet.task;
 
 import org.bukkit.Bukkit;
+import org.bukkit.entity.Player;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.scheduler.BukkitRunnable;
@@ -8,10 +9,14 @@ import pl.chudziudgi.lifesteal.SurvivalPlugin;
 import pl.chudziudgi.lifesteal.feature.user.User;
 import pl.chudziudgi.lifesteal.feature.user.UserService;
 
+import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class PetPotionEffectTask extends BukkitRunnable {
+
+    private static final int TICK_DELAY = 20 * 5;
 
     private final UserService userService;
     private final SurvivalPlugin survivalPlugin;
@@ -19,26 +24,34 @@ public class PetPotionEffectTask extends BukkitRunnable {
     public PetPotionEffectTask(UserService userService, SurvivalPlugin survivalPlugin) {
         this.userService = userService;
         this.survivalPlugin = survivalPlugin;
-        this.runTaskTimerAsynchronously(this.survivalPlugin, 20, 0);
+        this.runTaskTimerAsynchronously(this.survivalPlugin, TICK_DELAY, TICK_DELAY);
     }
 
     @Override
     public void run() {
-        Bukkit.getOnlinePlayers().forEach(player -> {
-            User user = this.userService.findUserByUUID(player.getUniqueId());
-            if (user == null || user.getPetDataArrayList().isEmpty()) return;
+        Collection<? extends Player> onlinePlayers = Bukkit.getOnlinePlayers();
+        for (Player player : onlinePlayers) {
+            User user = userService.findUserByUUID(player.getUniqueId());
+            if (user == null || user.getPetDataArrayList().isEmpty()) {
+                continue;
+            }
+
             List<PotionEffect> effects = user.getPetDataArrayList().stream()
-                    .map(pet -> PotionEffectType.getById(pet.getPetData().getPotionEffect()))
+                    .map(pet -> {
+                        PotionEffectType type = PotionEffectType.getById(pet.getPetData().getPotionEffect());
+                        return type != null ? new PotionEffect(type, TICK_DELAY, 0, true, false) : null;
+                    })
                     .filter(Objects::nonNull)
-                    .map(effectType -> new PotionEffect(effectType, 40, 0, true, false))
-                    .toList();
+                    .collect(Collectors.toList());
 
             if (!effects.isEmpty()) {
-                Bukkit.getScheduler().runTask(this.survivalPlugin, () -> {
-                    player.addPotionEffects(effects);
-                });
+                new BukkitRunnable() {
+                    @Override
+                    public void run() {
+                        player.addPotionEffects(effects);
+                    }
+                }.runTask(this.survivalPlugin);
             }
-        });
+        }
     }
-
 }
